# phaneros

./: .gitignore  Cargo.toml
crates/phaneros/: Cargo.toml  README.md
crates/phaneros-server/: Cargo.toml
crates/phaneros-server/src/: main.rs
crates/phaneros-server/src/routers/blob/: download_blob_route_handler.rs  upload_blob_bytes_route_handler.rs  upload_blob_route_handler.rs
crates/phaneros-server/src/routers/drive/: get_node_route_handler.rs  get_root_route_handler.rs  mod.rs
crates/phaneros-store/: Cargo.toml  build.rs
crates/phaneros-store/migrations/: 0001_init.sql
crates/phaneros-store/src/: config.rs  db.rs  lib.rs  main.rs  state.rs
crates/phaneros-store/src/routers/: mod.rs
crates/phaneros-store/src/routers/blob/: commit_blob_route_handler.rs  download_blob_bytes_route_handler.rs  download_blob_route_handler.rs  head_or_get_blob_route_handler.rs  mod.rs  upload_blob_bytes_route_handler.rs  upload_blob_route_handler.rs
crates/phaneros-store/src/routers/drive/: get_node_route_handler.rs  get_root_route_handler.rs  get_versions_route_handler.rs  mod.rs  put_node_route_handler.rs  put_root_route_handler.rs
crates/phaneros-store/src/services/: mod.rs
crates/phaneros-store/src/services/blob/: bytes_repository.rs  fs_bytes_repository.rs  metadata_repository.rs  mod.rs  service.rs  sqlite_metadata_repository.rs  unimplemented_bytes_repository.rs  unimplemented_metadata_repository.rs
crates/phaneros-store/src/services/node/: mod.rs  repository.rs  service.rs  sqlite_repository.rs  unimplemented_repository.rs
crates/phaneros-sync/: Cargo.toml
crates/phaneros-sync/src/: blob.rs  lib.rs  node.rs
crates/phaneros/src/: folder_tree.rs  lib.rs  main.rs  scanner.rs  syncer.rs  watcher.rs
crates/phaneros/src/blob_repository/: http_blob_repository.rs  in_memory_blob_repository.rs  mod.rs  repository.rs  tests.rs
crates/phaneros/src/blob_store/: blob.rs  http_blob_store.rs  in_memory_blob_store.rs  mod.rs  store.rs  tests.rs
crates/phaneros/src/node_repository/: http_node_repository.rs  in_memory_node_repository.rs  mod.rs  repository.rs  tests.rs
crates/phaneros/src/node_store/: http_node_store.rs  in_memory_node_store.rs  mod.rs  node.rs  store.rs  tests.rs
crates/phaneros/src/scanner/: file_chunker.rs  file_counter.rs  mod.rs  scan.rs  scanner.rs  tests.rs
crates/phaneros/src/syncer/: diff.rs  merge.rs  mod.rs  sync_state.rs  tests.rs
crates/phaneros/src/syncer/tests/: diff_spec.rs  error_safety_spec.rs  fixtures.rs  merge_spec.rs  mod.rs  plan_sync_spec.rs  reconcile_spec.rs
crates/phaneros/src/utils/: mod.rs  observer.rs  store_dump.rs
documentation/: main.md  sync-protocol.md
documentation/reference/: sync-and-merge.md
