[package]
name = "phaneros-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
phaneros-sync = { version = "0.1.0", path = "../phaneros-sync" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.53.0", features = ["full"] }
