[package]
name = "phaneros-store"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.10.1"
figment = { version = "0.10.19", features = ["env"] }
phaneros-sync = { version = "0.1.0", path = "../phaneros-sync" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["full"] }
