[package]
name = "phaneros"
version = "0.1.0"
description = "A command-line utility for synchronizing files and directories across multiple devices."
repository = "https://github.com/asierzapata/phaneros"
homepage = "https://asierzapata.github.io/phaneros/"
keywords = ["sync", "file-synchronization", "command-line", "utility"]
categories = ["command-line-utilities"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[[bin]]
name = "phaneros"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.5"
clap = { version = "4.5", features = ["derive"] }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
rayon = "1.12.0"
thiserror = "2.0.18"

[dev-dependencies]
filetime = "0.2.29"
tempfile = "3.27.0"
